Changes between 1.3.2 and 1.3.3a1
==================================================

- fix terminal coloring for win32
  (thanks Michael Foord for reporting)
- fix weirdness: make terminal width detection work on stdout instead of stdin 
  (thanks Armin Ronacher for reporting) 

- remove trailing whitespace in all py/text files

Changes between 1.3.1 and 1.3.2
==================================================

New features 
++++++++++++++++++

- fix issue103:  introduce py.test.raises as context manager, examples::

    with py.test.raises(ZeroDivisionError):  
        x = 0
        1 / x

    with py.test.raises(RuntimeError) as excinfo:
        call_something()

    # you may do extra checks on excinfo.value|type|traceback here

  (thanks Ronny Pfannschmidt) 

- Funcarg factories can now dynamically apply a marker to a 
  test invocation.  This is for example useful if a factory 
  provides parameters to a test which are expected-to-fail::

    def pytest_funcarg__arg(request):
        request.applymarker(py.test.mark.xfail(reason="flaky config"))
        ...

    def test_function(arg):
        ...

- improved error reporting on collection and import errors. This makes 
  use of a more general mechanism, namely that for custom test item/collect
  nodes ``node.repr_failure(excinfo)`` is now uniformly called so that you can 
  override it to return a string error representation of your choice 
  which is going to be reported as a (red) string. 

- introduce '--junitprefix=STR' option to prepend a prefix 
  to all reports in the junitxml file. 

Bug fixes / Maintenance
++++++++++++++++++++++++++

- make tests and the ``pytest_recwarn`` plugin in particular fully compatible 
  to Python2.7 (if you use the ``recwarn`` funcarg warnings will be enabled so that 
  you can properly check for their existence in a cross-python manner). 
- refine --pdb: ignore xfailed tests, unify its TB-reporting and 
  don't display failures again at the end.